--- a/commons-rng-bom/pom.xml
+++ b/commons-rng-bom/pom.xml
@@ -52,6 +52,8 @@
   <properties>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <!-- Reproducible builds -->
+    <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
 
     <!-- Skip the standard install and deploy to avoid processing this pom as the artifact. -->
     <maven.install.skip>true</maven.install.skip>
