--- a/commons-rng-client-api/pom.xml
+++ b/commons-rng-client-api/pom.xml
@@ -31,13 +31,15 @@
   <description>API for client code that uses random numbers generators.</description>
 
   <properties>
+    <!-- Workaround to avoid duplicating config files. -->
+    <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <!-- Reproducible builds -->
+    <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
     <!-- OSGi -->
     <commons.osgi.symbolicName>org.apache.commons.rng</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng</commons.osgi.export>
     <!-- Java 9+ -->
     <commons.module.name>org.apache.commons.rng.api</commons.module.name>
-    <!-- Workaround to avoid duplicating config files. -->
-    <rng.parent.dir>${basedir}/..</rng.parent.dir>
     <rng.jira.component>client-api</rng.jira.component>
   </properties>
 
