--- a/commons-rng-core/pom.xml
+++ b/commons-rng-core/pom.xml
@@ -35,13 +35,15 @@
   may be enforced through JPMS access restrictions.</description>
 
   <properties>
-    <!-- OSGi -->
-    <commons.osgi.symbolicName>org.apache.commons.rng.core</commons.osgi.symbolicName>
-    <commons.osgi.export>org.apache.commons.rng.core;x-friends:="org.apache.commons.rng.simple"</commons.osgi.export>
-    <!-- Java 9+ -->
-    <commons.module.name>org.apache.commons.rng.core</commons.module.name>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <!-- Reproducible builds -->
+    <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
+    <!-- OSGi -->
+    <commons.osgi.symbolicName>org.apache.commons.rng.core</commons.osgi.symbolicName>
+    <commons.osgi.export>org.apache.commons.rng.core</commons.osgi.export>
+    <!-- Java 9+ -->
+    <commons.module.name>org.apache.commons.rng.core</commons.module.name>
     <rng.jira.component>core</rng.jira.component>
   </properties>
 
