--- a/commons-rng-examples/examples-jpms/jpms-lib/pom.xml
+++ b/commons-rng-examples/examples-jpms/jpms-lib/pom.xml
@@ -45,6 +45,8 @@
   <properties>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/../../..</rng.parent.dir>
+    <!-- Reproducible builds -->
+    <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
     <!-- OSGi -->
     <commons.osgi.symbolicName>org.apache.commons.rng.examples.jpms.lib</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng.examples.jpms.lib</commons.osgi.export>
