--- a/commons-rng-sampling/pom.xml
+++ b/commons-rng-sampling/pom.xml
@@ -32,13 +32,15 @@
     for various distributions.</description>
 
   <properties>
+    <!-- Workaround to avoid duplicating config files. -->
+    <rng.parent.dir>${basedir}/..</rng.parent.dir>
+    <!-- Reproducible builds -->
+    <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
     <!-- OSGi -->
     <commons.osgi.symbolicName>org.apache.commons.rng.sampling</commons.osgi.symbolicName>
     <commons.osgi.export>org.apache.commons.rng.sampling</commons.osgi.export>
     <!-- Java 9+ -->
     <commons.module.name>org.apache.commons.rng.sampling</commons.module.name>
-    <!-- Workaround to avoid duplicating config files. -->
-    <rng.parent.dir>${basedir}/..</rng.parent.dir>
     <rng.jira.component>sampling</rng.jira.component>
   </properties>
 
