--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build with Maven
       # Use the default goal
       if: matrix.java == 8
-      run: mvn --show-version --batch-mode --no-transfer-progress
+      run: mvn --errors --show-version --batch-mode --no-transfer-progress
     - name: Build with Maven including examples
       # Examples require Java 11+.
       # Building javadoc errors when run with the package phase with an error about
