--- a/commons-rng-docs/pom.xml
+++ b/commons-rng-docs/pom.xml
@@ -90,7 +90,7 @@
         <artifactId>spdx-maven-plugin</artifactId>
         <executions>
           <execution>
-            <id>build-spdx</id>
+            <id>build-sbom-spdx</id>
             <goals>
               <goal>createSPDX</goal>
             </goals>
