--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,8 +46,10 @@ jobs:
       # Examples require Java 11+.
       # Building javadoc errors when run with the package phase with an error about
       # the module path and the unamed module (despite using an automatic module name).
-      # Here we run the build and javadoc generation separately (which requires install of sources)
+      # Here we run the build and javadoc generation separately (which requires install of sources).
+      # Run the OSGi integration test for the installed modules.
       if: matrix.java > 8
       run: |
         mvn --show-version --batch-mode --no-transfer-progress -P commons-rng-examples clean install -Dmaven.javadoc.skip
         mvn --show-version --batch-mode --no-transfer-progress -P commons-rng-examples javadoc:javadoc
+        mvn --show-version --batch-mode --no-transfer-progress -P commons-rng-integration -pl commons-rng-integration clean package integration-test
