--- a/pom.xml
+++ b/pom.xml
@@ -60,8 +60,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <rng.revapi.version>0.14.7</rng.revapi.version>
     <rng.revapi.java.version>0.27.0</rng.revapi.java.version>
-    <!-- MathJax configuration also includes the prerequisite polyfill.min.js script.
-         See the maven-javadoc-plugin plugin. -->
+    <!-- MathJax configuration. See the maven-javadoc-plugin plugin. -->
     <rng.mathjax.url>https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</rng.mathjax.url>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
@@ -352,7 +351,7 @@
           </links>
           <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
-          <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
+          <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
           <!-- Fix for JDK 11 javadoc search:
                https://stackoverflow.com/questions/52326318/maven-javadoc-search-redirects-to-undefined-url -->
           <bottom>
@@ -471,7 +470,7 @@
           </links>
           <failOnWarnings>true</failOnWarnings>
           <!-- Enable MathJax -->
-          <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script src="https://polyfill.io/v3/polyfill.min.js?features=es6"&gt;&lt;/script&gt;&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
+          <additionalOptions>${doclint.javadoc.qualifier} ${allowscript.javadoc.qualifier} -header '&lt;script type="text/javascript" async src="${rng.mathjax.url}"&gt;&lt;/script&gt;'</additionalOptions>
           <!-- Fix for JDK 11 javadoc search:
                https://stackoverflow.com/questions/52326318/maven-javadoc-search-redirects-to-undefined-url -->
           <bottom>
