--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-parent</artifactId>
-    <version>69</version>
+    <version>71</version>
   </parent>
 
   <artifactId>commons-rng-parent</artifactId>
@@ -70,8 +70,7 @@
        depend on other packages. -->
     <commons.jxr.version>2.5</commons.jxr.version>
 
-    <!-- Increase from commons-parent -->
-    <commons.jacoco.methodRatio>1.00</commons.jacoco.methodRatio>
+    <!-- Change from commons-parent -->
     <commons.jacoco.haltOnFailure>true</commons.jacoco.haltOnFailure>
 
     <commons.site.path>rng</commons.site.path>
