Update jacoco coverage rules for simple module

--- a/commons-rng-simple/pom.xml
+++ b/commons-rng-simple/pom.xml
@@ -42,6 +42,10 @@
     <!-- Java 9+ -->
     <commons.module.name>org.apache.commons.rng.simple</commons.module.name>
     <rng.jira.component>simple</rng.jira.component>
+
+    <!-- Change from commons-parent of 1.0 as some illegal state cases cannot be reached -->
+    <commons.jacoco.instructionRatio>0.99</commons.jacoco.instructionRatio>
+    <commons.jacoco.lineRatio>0.99</commons.jacoco.lineRatio>
   </properties>
 
   <dependencies>
