--- a/commons-rng-sampling/pom.xml
+++ b/commons-rng-sampling/pom.xml
@@ -47,6 +47,12 @@
     <!-- Java 9+ -->
     <commons.module.name>org.apache.commons.rng.sampling</commons.module.name>
     <rng.jira.component>sampling</rng.jira.component>
+
+    <!-- Change from commons-parent of 1.0 as some floating-point edge cases cannot be reached -->
+    <commons.jacoco.instructionRatio>0.99</commons.jacoco.instructionRatio>
+    <commons.jacoco.branchRatio>0.99</commons.jacoco.branchRatio>
+    <commons.jacoco.lineRatio>0.99</commons.jacoco.lineRatio>
+    <commons.jacoco.complexityRatio>0.99</commons.jacoco.complexityRatio>
   </properties>
 
   <dependencies>
