--- a/commons-rng-bom/pom.xml
+++ b/commons-rng-bom/pom.xml
@@ -21,11 +21,11 @@
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
   </parent>
 
   <artifactId>commons-rng-bom</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.6</version>
   <name>Apache Commons RNG (Bill of Materials)</name>
   <packaging>pom</packaging>
 
