--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -23,11 +23,11 @@ under the License.
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.6</version>
   </parent>
 
   <artifactId>commons-rng</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.6</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -66,18 +66,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -85,18 +85,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -104,18 +104,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -123,18 +123,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.6-SNAPSHOT</version>
+          <version>1.6</version>
           <classifier>javadoc</classifier>
         </dependency>
 
