--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   </parent>
 
   <artifactId>commons-rng-parent</artifactId>
-  <version>1.6-SNAPSHOT</version>
+  <version>1.6</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG</name>
   <description>The Apache Commons RNG project provides pure-Java implementation of pseudo-random generators.</description>
@@ -44,7 +44,7 @@
     <!-- This flag should only be true in the dist-archive module. -->
     <commons.release.isDistModule>false</commons.release.isDistModule>
     <!-- Reproducible builds: maven-artifact-plugin:check-buildplan -->
-    <rng.build.outputTimestamp>2024-04-18T00:00:00Z</rng.build.outputTimestamp>
+    <rng.build.outputTimestamp>2024-07-05T00:00:00Z</rng.build.outputTimestamp>
     <project.build.outputTimestamp>${rng.build.outputTimestamp}</project.build.outputTimestamp>
     <!-- do not use snapshot suffix here -->
     <commons.release.version>1.6</commons.release.version>
