--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -78,6 +78,7 @@
     <project.mainClass>org.openjdk.jmh.Main</project.mainClass>
     <!-- Disable analysis for benchmarking code. -->
     <pmd.skip>true</pmd.skip>
+    <cpd.skip>true</cpd.skip>
     <spotbugs.skip>true</spotbugs.skip>
 
     <!-- Skip tests. This avoids the lengthy test of the ziggurat samplers. Override using:
