Skip binary compatibility check in docs module
There is no jar artifact to check.

--- a/commons-rng-docs/pom.xml
+++ b/commons-rng-docs/pom.xml
@@ -54,6 +54,8 @@
     <checkstyle.skip>true</checkstyle.skip>
     <changes.jira.skip>true</changes.jira.skip>
     <skipSurefireReport>true</skipSurefireReport>
+    <japicmp.skip>true</japicmp.skip>
+    <revapi.skip>true</revapi.skip>
   </properties>
 
   <!-- Depend on all other modules -->
