--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -216,6 +216,7 @@
                 </goals>
                 <configuration>
                   <finalName>${uberjar.name}</finalName>
+                  <createDependencyReducedPom>false</createDependencyReducedPom>
                   <transformers>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                       <mainClass>${project.mainClass}</mainClass>
