--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -106,6 +106,7 @@
                 </goals>
                 <configuration>
                   <finalName>${uberjar.name}</finalName>
+                  <createDependencyReducedPom>false</createDependencyReducedPom>
                   <minimizeJar>true</minimizeJar>
                   <transformers>
                     <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
