--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <rng.revapi.version>0.15.0</rng.revapi.version>
     <rng.revapi.java.version>0.28.1</rng.revapi.java.version>
     <!-- MathJax configuration. See the maven-javadoc-plugin plugin. -->
-    <rng.mathjax.url>https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js</rng.mathjax.url>
+    <rng.mathjax.url>https://commons.apache.org/js/mathjax/tex-mml-chtml.js</rng.mathjax.url>
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}</rng.parent.dir>
 
