--- a/pom.xml
+++ b/pom.xml
@@ -667,7 +667,7 @@ This is avoided by creating an empty directory when svn is not available.
                 </configurationFile>
               </analysisConfigurationFiles>
               <!-- Note: Property 'reportSeverity' is deprecated but newer 'reportCriticality'
-                   does work as documented. -->
+                   does not work as documented. -->
               <reportSeverity>equivalent</reportSeverity>
               <reportCriticality>allowed</reportCriticality>
             </configuration>
