--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
   </modules>
 
   <scm>
-    <connection>scm:git:http://gitbox.apache.org/repos/asf/commons-rng.git</connection>
+    <connection>scm:git:https://gitbox.apache.org/repos/asf/commons-rng.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/commons-rng.git</developerConnection>
     <url>https://gitbox.apache.org/repos/asf?p=commons-rng.git</url>
   </scm>
