Pick up commons.animal-sniffer.version from parent POM

--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -80,6 +80,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
+        <version>${commons.animal-sniffer.version}</version>
         <configuration>
           <ignores>
             <ignore>java.nio.IntBuffer</ignore>
